# sides

Airplane-simulator/: Makefile  README.md  airport_sim
Airplane-simulator/src/: Airport.cpp  Airport.h  Plane.h  Queue.h  Runway.cpp  Runway.h  Simulation.cpp  Simulation.h  main.cpp
HeroFight/: README.md
HeroFight/HeroFight/: Character.cs  Enemy.cs  HeroFight.csproj  IHealable.cs  Item.cs  Mage.cs  Player.cs  Program.cs  Rogue.cs  Warrior.cs
OBP200-RolePlayingGame-master/: OBP200-RolePlayingGame.sln  README.md
OBP200-RolePlayingGame-master/OBP200-RolePlayingGame/: Character.cs  Enemy.cs  IHealable.cs  Item.cs  Player.cs  Program.cs
RolePlayingGame2-ORGINAL/: LICENSE
RolePlayingGame2-ORGINAL/OBP200-RolePlayingGame/: Character.cs  Enemy-cs.cs  IHealable.cs  Item.cs  OBP200-RolePlayingGame.csproj  Player.cs  Program.cs
Summer 2026/project-01-code-review/: README.md
Summer 2026/project-02-open-source/: CONTRIBUTION_LOG.md  README.md
Summer 2026/project-03-technical-writing/: post-1-node-postgres-setup.md  post-2-websockets-vs-http.md  post-3-jwt-auth-explained.md  post-4-production-deployment-lessons.md  post-5-open-source-contribution-story.md
Summer 2026/project-04-ray-tracer/: CMakeLists.txt  README.md
Summer 2026/project-04-ray-tracer/src/: camera.h  color.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
Summer 2026/project-05-career-prep/: CV_TEMPLATE.md  LINKEDIN_MESSAGES.md  PERSONAL_PITCH.md
Summer 2026/project-06-interpreter/: README.md  example.lox
Summer 2026/project-09-ctf/: README.md
(+92 files in other folders)
